src/src/index.scss
@import "theme";

@include themed($themes) {
  h1, h2, h3, h4, h5, h6, p, label, span, div {
    color: theme-var("lightest")
  }

  * {
    scrollbar-color: theme-var("selected") theme-var("darker");
  }

  .divider {
    border-color: theme-var("darker");
  }

  input, button, select {
    background-color: theme-var("darkest-blue");
    outline: none;
    color: theme-var("lightest");

    &::placeholder {
      color: theme-var("lightest")
    }

    &:hover {
      background-color: theme-var("light-blue");
    }
  }

  .file-input {
    background-color: theme-var("darkest-blue");

    &:hover {
      background-color: theme-var("dark-blue");
    }

    &:has(input[type="file"]:focus) {
      background-color: theme-var("selected");
    }
  }

  input {
    &:focus {
      background-color: theme-var("selected");

      &::placeholder {
        color: theme-var("lightest")
      }
    }
  }

  button {
    &:active {
      background-color: theme-var("selected");
    }
  }
}

@font-face {
  font-family: 'Unifont';
  src: local("Unifont"), url(../public/fonts/unifont.ttf) format('truetype');
}

p {
  margin: 4px 0;
}

* {
  font-smooth: never;
  -webkit-font-smoothing: none;
  cursor: url(../public/icons/cursor-small.png), auto;
}

:root, button, input, select, option, label {
  font-family: 'Unifont', sans-serif;
}

button, select {
  cursor: pointer;
  border: none;
}

.file-input {
  padding: 4px 8px;
  cursor: pointer;
  height: 25px;
  box-sizing: border-box;

  button {
    display: none;
  }
}

input, button {
  user-select: initial;
  -webkit-user-select: initial;
  border: none;
  padding: 4px 8px;
  height: 25px;
  box-sizing: border-box;
  font-size: 1rem;
}

form {
  display: flex;
  flex-direction: column;
  gap: 4px;
}

.form-element {
  display: flex;
  align-items: center;
  gap: 4px;

  input, .file-input {
    flex: 1;
  }

  label {
    flex: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
  }
}

h1, h2, h3, h4, h5, h6 {
  font-weight: 400;
}

.interactable-text {
  color: #4682B4;
  cursor: pointer;
}

.divider {
  width: 100%;
  height: 0;
  border-bottom: 2px solid;
  margin-top: 8px;
  margin-bottom: 8px;
}

html {
  height: 100%;
  overflow: hidden;

  body {
    margin: 0;
    height: inherit;

    #root {
      height: inherit;
    }
  }
}

